[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/Goob.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ball.gd" type="Script" id=2]
[ext_resource path="res://sprites/animations/GoobCharger2.png" type="Texture" id=3]
[ext_resource path="res://sprites/animations/GoobCharger1.png" type="Texture" id=4]
[ext_resource path="res://sprites/animations/GoobCharger3.png" type="Texture" id=5]
[ext_resource path="res://scripts/goobPerSecond.gd" type="Script" id=6]
[ext_resource path="res://sprites/DamnDaniel.png" type="Texture" id=7]
[ext_resource path="res://sprites/animations/Chargd/MoreDetail/Chargd1.png" type="Texture" id=8]
[ext_resource path="res://sprites/animations/Chargd/MoreDetail/Chargd2.png" type="Texture" id=9]
[ext_resource path="res://sprites/animations/Chargd/MoreDetail/Chargd3.png" type="Texture" id=10]
[ext_resource path="res://scripts/TopHat.gd" type="Script" id=11]
[ext_resource path="res://sprites/headphon/gaming1.png" type="Texture" id=12]
[ext_resource path="res://sprites/headphon/gaming2.png" type="Texture" id=13]
[ext_resource path="res://sprites/headphon/gaming4.png" type="Texture" id=14]
[ext_resource path="res://sprites/headphon/gaming3.png" type="Texture" id=15]
[ext_resource path="res://sprites/gooblie.png" type="Texture" id=16]
[ext_resource path="res://sprites/Sombrero.png" type="Texture" id=17]
[ext_resource path="res://sprites/headphon/headphonbutaweosme/gaming1.png" type="Texture" id=18]
[ext_resource path="res://sprites/headphon/headphonbutaweosme/gaming3.png" type="Texture" id=19]
[ext_resource path="res://sprites/headphon/headphonbutaweosme/gaming2.png" type="Texture" id=20]
[ext_resource path="res://sprites/headphon/headphonbutaweosme/gaming4.png" type="Texture" id=21]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.255682 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 50.52
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 35.5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Jumpingfunny"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0600476 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 2.8 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Ball" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -1.33333, 13 )
emitting = false
amount = 10
lifetime = 2.0
speed_scale = 3.31
randomness = 0.21
process_material = SubResource( 9 )
texture = ExtResource( 16 )

[node name="particle" type="Timer" parent="."]
wait_time = 0.1

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 4.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 6 )

[node name="TopHat" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
script = ExtResource( 11 )

[node name="HeadPhone" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )

[node name="KittyHeadphone" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 10 )

[node name="Charger" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
playing = true

[node name="ChargerSuper" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
frame = 2
playing = true

[node name="Sombrero" type="Sprite" parent="."]
visible = false
position = Vector2( 4, -16.9189 )
scale = Vector2( 0.213932, 0.205558 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jumpingfunny = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="timeout" from="particle" to="." method="_on_particle_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="HeadPhone" to="." method="_on_HeadPhone_animation_finished"]
[connection signal="animation_finished" from="KittyHeadphone" to="." method="_on_KittyHeadphone_animation_finished"]
